# ivrit-ai-streaming

./: .gitignore  Dockerfile  README.md  TODO.md  client.py  faster-whisper-server-client.py  infer.py  model.py  pyproject.toml  requirements.txt  streaming_client.py  test_audio.py  test_audio_streaming.py  whisper_online.py  ws_client.py  ws_server.py
