[tool.poetry]
name = "ivrit-streaming-gigaverse"
version = "0.1.0"
description = ""
authors = ["AshDavid12 <gaashdavid@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.7"
# pytube = "^15.0.0"
#pydantic = "^2.8.2"
#python-dotenv = "^1.0.1"
#fastapi = "^0.111.1"
#requests = "^2.32.3"
#httpx = "^0.27.0"
#uvicorn = "^0.30.1"
#asyncio = "^3.4.3"
#confluent-kafka = "^2.5.0"
#flask = "^3.0.3"
#faster-whisper = "1.0.3"
#runpod = "^1.7.0"
#librosa = ">=0.10.2.post1,<0.11.0"
#soundfile = "^0.12.1"
#openai = "^1.42.0"
#numpy = "^1.22.0"
#torch = "2.1.0"
#sounddevice = "^0.5.0"
# torch = "^2.4.1"
torch = { version = "^2.0", source = "pytorch" }
whisper = "^1.1.10"
requests = "^2.32.3"
transformers = "^4.44.2"
soundfile = "^0.12.1"
faster-whisper = "^1.0.3"
fastapi = "^0.114.2"
websockets = "^13.0.1"
#websocket-client = "^1.8.0"
librosa = "^0.10.2.post1"
uvicorn = "^0.30.6"
# torchaudio = "^2.4.1"
torchaudio = { version = "^2.0", source = "pytorch" }


silero-vad = "^5.1"
#openai = "^1.42.0"
#numpy = "^1.22.0"
#torch = "2.1.0"
#sounddevice = "^0.5.0"
#pydub = "^0.25.1"
#ffmpeg = "^1.4"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
