[tool.poetry]
name = "ivrit-streaming-gigaverse"
version = "0.1.0"
description = ""
authors = ["AshDavid12 <gaashdavid@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.7"
torch = { version = "^2.0", source = "pytorch" }
whisper = "^1.1.10"
requests = "^2.32.3"
transformers = "^4.0"
soundfile = "^0.12.1"
faster-whisper = "^1.0.3"
websockets = "^13.0.1"
uvicorn = "^0.30.6"
torchaudio = { version = "^2.0", source = "pytorch" }
silero-vad = "^5.1"
fastapi = {extras = ["standard"], version = "^0.115.2"}
librosa = "^0.10.2.post1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
