[tool.poetry]
name = "ivrit-streaming-gigaverse"
version = "0.1.0"
description = ""
authors = ["AshDavid12 <gaashdavid@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.7"
torch = { version = "^2.0", source = "pytorch" }
whisper = "^1.1.10"
requests = "^2.32.3"
transformers = "^4.0"
soundfile = "^0.12.1"
faster-whisper = "^1.0.3"
websockets = "^13.0.1"
uvicorn = "^0.30.6"
torchaudio = { version = "^2.0", source = "pytorch" }
silero-vad = "^5.1"
fastapi = {extras = ["standard"], version = "^0.115.2"}
librosa = "^0.10.2.post1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
# pre-commit hooks, tests and mypy
pre-commit = "^3.5.0"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
ignore = [
    "F821", # Unknown name (disabled because it doesnt respect annotation postponing),
    "E501", # long lines
]
fixable = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
[docformatter]
pre-summary-newline = true

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.black]
line-length = 120
